Create layout and logic for signup with username and password, create a path for users to go to homepage if already logged in and to registration page if loggedin but not registered yet

--- a/myGuide/app/src/main/AndroidManifest.xml
+++ b/myGuide/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:theme="@style/Theme.MyGuide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.StudentSetupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.TutorSetupActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.StudentHomeActivity"
             android:exported="false" />
         <activity
