--- a/myGuide/app/build.gradle
+++ b/myGuide/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     implementation 'com.github.pratikbutani:MultiSelectSpinner:1.0.1'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation 'com.shantanudeshmukh:linkedinsdk:1.0.0'
     implementation 'com.github.pchmn:MaterialChipsInput:1.0.8'
@@ -58,4 +59,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:4.0.0'
+    implementation 'com.github.parse-community:ParseLiveQuery-Android:1.2.2'
 }
