--- a/myGuide/app/src/main/AndroidManifest.xml
+++ b/myGuide/app/src/main/AndroidManifest.xml
@@ -26,8 +26,21 @@
         android:theme="@style/Theme.MyGuide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.GetAllConnected"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.TutorNotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.TutorDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddEducationActivity"
             android:exported="false" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.codepath.fileprovider"
@@ -37,6 +50,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/fileprovider" />
         </provider>
+
         <activity
             android:name=".ui.StudentSetupActivity"
             android:exported="false" />
