Create fragment for showing all the events in a specific day when a day is clicked from calendar view, search by event title, bottom sheet pop up to create new event when the floating bar is clicked, go to add, edit and delete availability in a grid

--- a/myGuide/app/src/main/AndroidManifest.xml
+++ b/myGuide/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:theme="@style/Theme.MyGuide"
         tools:targetApi="31">
         <activity
+            android:name=".ui.AvailabilitySchedulingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.GetAllConnected"
             android:exported="false" />
         <activity
