--- a/myGuide/app/build.gradle
+++ b/myGuide/app/build.gradle
@@ -35,14 +35,20 @@ dependencies {
 
     implementation 'com.github.pratikbutani:MultiSelectSpinner:1.0.1'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-
     implementation 'com.shantanudeshmukh:linkedinsdk:1.0.0'
     implementation 'com.github.pchmn:MaterialChipsInput:1.0.8'
     implementation "com.hootsuite.android:nachos:1.1.1"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    implementation 'com.linkedin.android.tachyon:tachyon:1.0.2'
+
+    implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.3'
+    implementation 'gr.escsoft.michaelprimez.searchablespinner:SearchableSpinner:1.0.9'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.4'
@@ -50,6 +56,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.7.1'
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
 
+    implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
