--- a/myGuide/app/src/main/AndroidManifest.xml
+++ b/myGuide/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -25,6 +27,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGuide"
         tools:targetApi="31">
+
+        <service
+            android:name=".Service.NotificationService"
+            android:stopWithTask="false"
+            android:label="@string/app_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="your.app.domain.NotificationService" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
         <activity
             android:name=".ui.AvailabilitySchedulingActivity"
             android:exported="false" />
